--- a/style.css
+++ b/style.css
@@ -13,26 +13,27 @@ body {
 
 }
 
-
 .card {
     width: 270px;
     height: 120px;
     perspective: 1000px;
     margin: 20px;
+    cursor: pointer;
+    user-select: none;
 }
 
 .card-inner {
     width: 100%;
     height: 100%;
-    position: relative;
     transform-style: preserve-3d;
     transition: transform 0.6s;
+    user-select: none;
+    position: relative;
 }
 
-.card:active .card-inner {
+.card.flip .card-inner {
     transform: rotateY(180deg);
 }
-
 
 .card-front, .card-back {
     position: absolute;
